Create Grid and Start and End icons

--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
             </div>
 
         </nav>
+        <div id="grid-container">
+            <div id="grid"></div>
+        </div>
     </div>
+    <script src="./scripts/script.js" type="module" ></script>
 </body>
 </html>
