--- a/index.html
+++ b/index.html
@@ -70,6 +70,45 @@
             </div>
 
         </nav>
+        <div id="legend-container">
+            <div id="legend">
+
+                <div class="legend-field">
+                    <div class="icon" id="wall"></div>
+                    <div class="description">Wall</div>
+                </div>
+
+                <div class="legend-field">
+                    <div class="icon" id="unexplored"></div>
+                    <div class="description">Unexplored</div>
+                </div>
+
+                <div class="legend-field">
+                    <div class="icon" id="explored"></div>
+                    <div class="description">Explored</div>
+                </div>
+
+                <div class="legend-field">
+                    <div class="icon" id="best-path"></div>
+                    <div class="description">Best Path</div>
+                </div>
+
+                <div class="legend-field">
+                    <i class="fas fa-car"></i>
+                    <div class="description">Start</div>
+                </div>
+
+                <div class="legend-field">
+                    <i class="fas fa-flag-checkered"></i>
+                    <div class="description">End</div>
+                </div>
+
+                <div class="legend-field">
+                    <i class="fas fa-weight-hanging"></i>
+                    <div class="description">Weight</div>
+                </div>
+            </div>
+        </div>
         <div id="grid-container">
             <div id="grid"></div>
         </div>
