Fiexd some style

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
 
             <!-- Visualize -->
-            <div class="nav-bar-button">Visualize</div>
+            <div class="nav-bar-button" id="visualize">Visualize</div>
 
             <!-- Clear Board -->
             <div class="nav-bar-button">Clear Board</div>
