--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
     <!-- My Stylesheet -->
     <link rel="stylesheet" href="./styles/css/styles.css">
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/x icon" href="/favicon.ico" />
     
     <title>Path Visualizer</title>
 </head>
@@ -51,13 +54,13 @@
             <div class="nav-bar-button" id="visualize">Visualize&nbsp;<span id="algorithm-name"></span></div>
 
             <!-- Clear Board -->
-            <div class="nav-bar-button">Clear Board</div>
+            <div class="nav-bar-button" id="clear-board">Clear Board</div>
 
             <!-- Clear Walls & Weights -->
-            <div class="nav-bar-button">Clear Walls & Weights</div>
+            <div class="nav-bar-button" id="clear-walls-and-weights">Clear Walls & Weights</div>
 
             <!-- Clear Path -->
-            <div class="nav-bar-button">Clear Path</div>
+            <div class="nav-bar-button" id="clear-path">Clear Path</div>
 
             <!-- Speed -->
             <div class="dropdown">
