--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./styles/css/styles.css">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/png" href="/favicon.ico?v=1.0" />
+    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
     
     <title>Path Visualizer</title>
 </head>
