--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="dropdown-menu">
                     <div class="nav-bar-button algorithm" id="Dijkstra">Dijkstra</div>
-                    <div class="nav-bar-button algorithm" id="Bellman">Bellman</div>
+                    <div class="nav-bar-button algorithm" id="A*">A* Search</div>
                     <div class="nav-bar-button algorithm" id="DFS">DFS</div>
                     <div class="nav-bar-button algorithm" id="BFS">BFS</div>
                 </div>
@@ -122,6 +122,12 @@
         </div>
         <div id="grid-container">
             <div id="grid"></div>
+        </div>
+        <div id="outer-weight-popup">
+            <div id="weight-popup">
+                <i class="fas fa-weight-hanging"></i>
+                <p>Weight Mode activated</p>
+            </div>
         </div>
     </div>
     <script src="./scripts/script.js" type="module" ></script>
