--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
 
         <div id="modal-buttons">
-          <div class="modal-button" id="previous-button">
+          <div class="modal-button disabled" id="previous-button">
             <i class="fas fa-angle-left"></i> Previous Tip
           </div>
           <div class="modal-button" id="next-button">
