--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
           </div>
           <div class="dropdown-menu">
-            <div class="nav-bar-button">Maze 1</div>
+            <div class="nav-bar-button" id="recursive">Recursive</div>
             <div class="nav-bar-button">Maze 2</div>
           </div>
         </div>
@@ -183,6 +183,9 @@
           <i class="fas fa-weight-hanging"></i>
           <p>Weight Mode activated</p>
         </div>
+      </div>
+      <div id="outer-stats-popup">
+        <div id="stats-popup"></div>
       </div>
     </div>
     <script src="./scripts/script.js" type="module"></script>
